Register link on homepage

--- a/views/dashboard/home.jade
+++ b/views/dashboard/home.jade
@@ -156,5 +156,5 @@ title SearchNTalk
                 | Use our flexible widgets and simple integration to power instant user-to-expert interactions.
             .trigger
                 .container
-                    a.btn.btn-primary.btn-lg Sign Up Now
+                    a.btn.btn-primary.btn-lg(href=AuthenticationUrls.register()) Sign Up Now
 include ../footer
