Widget creator UI fixed

--- a/views/dashboard/userSetting.jade
+++ b/views/dashboard/userSetting.jade
@@ -99,3 +99,4 @@ script.
     var selectedTab = '!{selectedTab || "phone"}';
     var userPhones = JSON.parse( '!{JSON.stringify(userPhone || [])}' );
 script(src='/js/app/dashboard/userSetting.js')
+include ../footer
