--- a/views/footer.jade
+++ b/views/footer.jade
@@ -8,6 +8,7 @@ div.footer
                     li
                         a(href='/privacy') Privacy Policy
                     li
+                        a(href=DashboardUrls.widgetCreator()) Get Widgets
         div.row.copyright
             div.hidden-xs.col-sm-9
             div.col-sm-3
