--- a/views/dashboard/widgetCreator.jade
+++ b/views/dashboard/widgetCreator.jade
@@ -5,45 +5,40 @@ title Widget Creator
     .container
         .row
             .content
-                .row
-                    .card
-                        .item
-                            .row
-                                h5.col-xs-8 Create Widget
-                                .header-link.col-xs-4
-                        .item
-                            .row
-                                .col-md-4
-                                    .row
-                                        h1 Theme
-                                        select.form-control(name='theme')
-                                            option(value='dark') Dark
-                                            option(value='light') Light
-                                    .row
-                                        br
-                                        h1 Size
-                                        select.form-control(name='size')
-                                            option(value='tiny') Tiny
-                                            option(value='small') Small
-                                            option(value='tall') Tall
-                                    .row
-                                        br
-                                        h1 Expert Id
-                                        if loggedInUser
-                                            input.form-control(name = 'expertId', value=loggedInUser.id)
-                                            div#helpText * Change the Expert Id to create widget for some other expert
-                                        else
-                                            input.form-control(name = 'expertId')
-                                            div#helpText * Please enter an Expert Id to create widget
-                                    .row#embedCode
-                                        br
-                                        h3 Embed Code
-                                        textarea(name='embedCodeText', readonly, rows='3', cols='51')
-                                .col-md-2
-                                .col-md-6
-                                    #iframeContent
+                .card
+                    .item
+                        .row
+                            h5.col-xs-8 Create Widget
+                            .header-link.col-xs-4
+                    .item-edit
+                        .row
+                            .col-md-4
+                                h3 Theme
+                                .form-group
+                                    select.form-control(name='theme')
+                                        option(value='dark') Dark
+                                        option(value='light') Light
+                                h3 Size
+                                .form-group
+                                    select.form-control(name='size')
+                                        option(value='tiny') Tiny
+                                        option(value='small') Small
+                                        option(value='tall') Tall
+                                h3 Expert Id
+                                .form-group
+                                    if loggedInUser
+                                        input.form-control(name = 'expertId', value=loggedInUser.id)
+                                    else
+                                        input.form-control(name = 'expertId')
+                                h3 Embed Code
+                                .form-group#embedCode
+                                    textarea.form-control(name='embedCodeText', readonly, rows='5')
+                            .col-md-2
+                            .col-md-6
+                                #iframeContent
 include ../footer
 script.
+    var widgetBaseUrl = '!{Config.get(Config.DASHBOARD_URI)}';
     var loggedInUser = JSON.parse( '!{JSON.stringify(loggedInUser)}' );
 script(src='/js/app/dashboard/widgetCreator.js')
 
