Phone verification fixed UI fixes

--- a/views/dashboard/cards/networkSettingCard.jade
+++ b/views/dashboard/cards/networkSettingCard.jade
@@ -3,7 +3,7 @@
         .header-row.row
             h5.col-xs-10 Network Settings
             .col-xs-1
-                a.btn.btn-link.editCardBtn(data-id=integration.id)
+                a.header-btn.btn.btn-default.editCardBtn(data-id=integration.id)
                     i.icon-pencil
     .item
         .row
