--- a/views/dashboard/dashboard.jade
+++ b/views/dashboard/dashboard.jade
@@ -52,5 +52,5 @@ title SearchNTalk - DashBoard
                                 p Take your expertise to the world. Our widgets let you be approachable for callers who might be seeking you.
                         .item
                             .row
-                                a.btn.btn-info(href=DashboardUrls.userSetting(loggedInUser.id) + '?mode=widget') Get Widgets
+                                a.btn.btn-info(href=DashboardUrls.widgetCreator()) Get Widgets
 include ../footer
