--- a/views/dashboard/mobileVerification.jade
+++ b/views/dashboard/mobileVerification.jade
@@ -10,7 +10,7 @@ include ../header
                         strong Expert account successfully created!
                         p Just one more step! We need to verify your mobile number
                         em.small This number will be used to connect the users to you for calls that you accept to receive
-                    form(action=ApiUrlDelegate.mobileVerificationCode(), method='post')
+                    form#sendCode(action=ApiUrlDelegate.mobileVerificationCode(), method='post')
                         .item-edit
                             .item
                                 .row
@@ -18,20 +18,24 @@ include ../header
                                     .form-group
                                         .row
                                             .col-xs-5
-                                                select.form-control
+                                                select.form-control(name='country_code')
                                                     for name,abb in CountryName
                                                         - var code = CountryCode[abb];
                                                         option(value=code)= name + ' (+' + code + ')'
                                             .col-xs-7
-                                                input.form-control#phoneNumber(type='text', placeholder='Phone Number')
-                                    div.links-editing
+                                                input.form-control(type='text', name="phone", placeholder='Phone Number')
+                                    .links-editing
                                         .edit-schedules
                                             input.btn.btn-primary.form-control(type='submit', value='Send verification code', name='sendCode')
                     form#verifyCode(style='display: none;')
-                        .form-group
-                            label Verification code
-                            input(type='text').form-control#verificationCode
-                        .form-group
-                            input.btn.btn-primary.form-control(type='submit', value='Verify', name='verify')
+                        .item-edit
+                            .item
+                                .row
+                                    h3 Verification code
+                                    .form-group
+                                        input(type='text', name='text').form-control#verificationCode
+                                    .links-editing
+                                        .edit-schedules
+                                            input.btn.btn-primary.form-control(type='submit', value='Verify', name='verify')
 script(src='/js/app/dashboard/mobileVerification.js')
 include ../footer
