Hidden image sections on homepage till they arrive

--- a/views/dashboard/home.jade
+++ b/views/dashboard/home.jade
@@ -70,7 +70,7 @@ title SearchNTalk
                             option(value='en', selected='')
                                 | English
 // /.masthead
-.hero
+//.hero
     .container
 // /.hero
 .highlights
@@ -81,7 +81,7 @@ title SearchNTalk
                     h1
                         em For&nbsp;
                         | Subject Matter Experts
-                .image
+                //.image
                 .description
                     h2 Have or want to create an online presence?
                     p Register on searchntalk.com to instantly start offering advice for a fee!
@@ -90,7 +90,7 @@ title SearchNTalk
                     h1
                         em For&nbsp;
                         | Networks of Experts
-                .image
+                //.image
                 .description
                     h2 Have access to several experts on a subject?
                     p
@@ -100,7 +100,7 @@ title SearchNTalk
                     h1
                         em For&nbsp;
                         | Content Websites
-                .image
+                //.image
                 .description
                     h2 Own a content website?
                     p
