--- a/public/css/combined.css
+++ b/public/css/combined.css
@@ -8677,10 +8677,7 @@ hr {
   width: 100%;
   height: 100%;
   z-index: 9996;
-  font-size: 150px;
-  line-height: 150px;
-  font-family: 'snticons';
-  content: '\e008';
+  top: 0;
 }
 .avatar .status {
   position: absolute;
@@ -9165,8 +9162,6 @@ hr {
   padding: 0px 10px;
 }
 .card .item .header-row {
-  margin: 0px 0px 10px 0px;
-  padding: 0px 0px 10px 0px;
   border-bottom: 2px solid #f9af18;
 }
 .card .item .header-link {
@@ -9923,4 +9918,10 @@ hr {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
+}
+
+.integration-setting .avatar {
+    float: left;
+    width: 120px;
+    height: 120px;
 }
