--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2127,10 +2127,7 @@ hr {
   width: 100%;
   height: 100%;
   z-index: 9996;
-  font-size: 150px;
-  line-height: 150px;
-  font-family: 'snticons';
-  content: '\e008';
+  top: 0;
 }
 .avatar .status {
   position: absolute;
@@ -2615,8 +2612,6 @@ hr {
   padding: 0px 10px;
 }
 .card .item .header-row {
-  margin: 0px 0px 10px 0px;
-  padding: 0px 0px 10px 0px;
   border-bottom: 2px solid #f9af18;
 }
 .card .item .header-link {
