--- a/views/dashboard/integration.jade
+++ b/views/dashboard/integration.jade
@@ -37,34 +37,33 @@ title SearchNTalk - DashBoard
                                 include cards/NetworkSettingCard
             else if createIntegration
                 .content.col-md-12
-                        .alert.alert-warning
-                            strong You're not a part of any network yet.
-                            p Create one?
-                    form.card#integration
-                        .item-edit.account-edit
-                            .item
-                                .header-row.row
-                                    .inputs.col-xs-8
-                                        .input-group
-                                            input.form-control(type='text', placeholder="Your Network's Name", name="title")
-                                div
-                                    .form-group
-                                        h3 Website URL:
-                                        input.form-control(type='text', name='website_url', placeholder)
-                                    .form-group
-                                        h3 Redirect URL:
-                                        input.form-control(type='text', name='redirect_url', placeholder)
-                            .clearer
-                        div.links-editing
-                            p.edit-schedules
-                                em Note: Create a network only if you've a group of experts. Else joining SearchNTalk network will be simpler and more useful.
-                                input.btn.btn-default(value='Create', type='submit')
-                    if !isPartOfDefaultNetwork
-                        strong OR
-                        .actions-pane
-                            .row
-                                .col-xs-6.align-left
-                                    a.btn.btn-warning(href=MemberRegistrationUrls.index() + '?integrationId=' + Config.get(Config.DEFAULT_NETWORK_ID)) Join SearchNTalk's expert network
+                    .alert.alert-warning
+                        strong Create and manage your own network
+                        form.card#integration
+                            .item-edit.account-edit
+                                .item
+                                    .header-row.row
+                                        .inputs.col-xs-8
+                                            .input-group
+                                                input.form-control(type='text', placeholder="Your Network's Name", name="title")
+                                    div
+                                        .form-group
+                                            h3 Website URL:
+                                            input.form-control(type='text', name='website_url', placeholder)
+                                        .form-group
+                                            h3 Redirect URL:
+                                            input.form-control(type='text', name='redirect_url', placeholder)
+                                .clearer
+                            div.links-editing
+                                p.edit-schedules
+                                    em Note: Create a network only if you've a group of experts. Else joining SearchNTalk network will be simpler and more useful.
+                                    input.btn.btn-default(value='Create', type='submit')
+                        if !isPartOfDefaultNetwork
+                            strong OR
+                            .actions-pane
+                                .row
+                                    .col-xs-6.align-left
+                                        a.btn.btn-warning(href=MemberRegistrationUrls.index() + '?integrationId=' + Config.get(Config.DEFAULT_NETWORK_ID)) Join SearchNTalk's expert network
 include ../footer
 script.
     var Timezone = JSON.parse('!{JSON.stringify(Timezone)}');
