--- a/views/header.jade
+++ b/views/header.jade
@@ -4,14 +4,13 @@ head
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
 
-    link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
+    //link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
     link(href='/css/combined.min.css?v=version', rel='stylesheet')
 
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
     script(src='/js/combined.min.js?v=version')
-    script(src='/bower_dependencies/jquery-expander/jquery.expander.js')
 
     script.
         $(document).ready(function() {
