--- a/views/dashboard/userSettingPassword.jade
+++ b/views/dashboard/userSettingPassword.jade
@@ -1,10 +1,6 @@
 include ../header
 include dashboardHeader
-style.
-    #userPhoneDetailsCard .update {
-        display: none;
-    }
-title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setting
+title ST-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Update Password
 .matter
     .container
         .row
@@ -19,22 +15,14 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                             .visible-xs.navbar-brand.network-brand Profile
                         .collapse.navbar-collapse#sectionNav
                             ul.nav.nav-pills.nav-stacked
-                                li(class=selectedTab == 'phone' || !selectedTab ? 'active' : '')
-                                    a Phone Numbers
-                                li(class=selectedTab == 'schedule' ? 'active' : '')
-                                    a Schedules and Pricing
-                                li(class=selectedTab == 'password' ? 'active' : '')
-                                    a Change Password
-            //
-               /.content
+                                li
+                                    a(href=DashboardUrls.userSettingPhone(loggedInUser.id)) Phone Numbers
+                                li
+                                    a(href=DashboardUrls.userSettingSchedule(loggedInUser.id)) Schedules and Pricing
+                                li.active
+                                    a(href=DashboardUrls.userSettingPassword(loggedInUser.id)) Change Password
             .content.col-md-8#sections
                 .row
-                    #userPhone
-                        include cards/UserPhoneCard
-                .row(style='display: none;')
-                    #userSchedule
-                        include userSchedule
-                .row(style='display: none;')
                     .card#password
                         form#changePasswordForm
                             .alert.alert-danger(style='display: none;')
@@ -53,7 +41,5 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                                         input.btn.btn-primary(type='submit', value='Change', name='changePassword')
 script.
     var user = JSON.parse( '!{JSON.stringify(loggedInUser)}' );
-    var selectedTab = '!{selectedTab || "phone"}';
-    var userPhones = JSON.parse( '!{JSON.stringify(userPhone || [])}' );
-script(src='/js/app/dashboard/userSetting.js')
+script(src='/js/app/dashboard/userSettingPassword.js')
 include ../footer
